# database-meta-rs

./: Cargo.toml  README.md  config.example.v1.yaml  config.example.v2.yaml  config.example.yaml
.github/workflows/: ci.yml
src/: commands.rs  config.rs  db.rs  error.rs  main.rs
src/commands/: export.rs  mod.rs  sync.rs
src/db/: fetch.rs  mod.rs  pool.rs  row.rs
src/format/: csv.rs  html.rs  insert.rs  json.rs  mod.rs  xml.rs  yaml.rs
src/migrate/: mod.rs  upgrade.rs  v1.rs
