[package]
name = "database-meta"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
csv = "1.3"
quick-xml = { version = "0.31", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
bigdecimal = { version = "0.3", features = ["serde"] }
