[package]
name = "db-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "db-tools"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# YAML parsing
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# PostgreSQL
postgres = { version = "0.19", features = ["with-serde_json-1"] }
native-tls = "0.2"
postgres-native-tls = "0.5"

# CSV
csv = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Misc
itertools = "0.12"
hex = "0.4.3"
