[package]
name = "db-tools"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "db-tools"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# PostgreSQL — async, native TLS support, compile-time checked queries
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = { version = "0.12" }          # connection pooling

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Date/time (matches postgres TIMESTAMP/DATE types)
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# CSV output
csv = "1"

# Error handling — thiserror for typed errors, anyhow for app-level
anyhow = "1"
thiserror = "1"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Progress display for large table diffs
indicatif = "0.17"
hex = "0.4.3"

[dev-dependencies]
tokio-test = "0.4"
